fix for the alignament of content on earch page

--- a/packages/omgx/wallet-frontend/src/components/listFarm/listFarm.module.scss
+++ b/packages/omgx/wallet-frontend/src/components/listFarm/listFarm.module.scss
@@ -89,8 +89,9 @@ $boxDropDownHeight: 60px;
     margin: 10px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
   }
-
+  
   .closeDropDown {
     height: 0px;
     animation: closeDropDown 1s;
@@ -98,9 +99,9 @@ $boxDropDownHeight: 60px;
     // background-color: $gray7;
     background: rgba(9, 22, 43, 0.5);
     border-radius: 8px;
-
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
   }
 
   .dropDownInit {
